Fixed a bug on page contact-us, update style to avoid horizontal scrolling on mobile

--- a/src/styles/pages/contactUs.scss
+++ b/src/styles/pages/contactUs.scss
@@ -220,7 +220,10 @@
     }
 
     .address-col {
-      transform: translateX(20%);
+      @include mobile {
+        width: 200px;
+        margin: 0 auto;
+      }
 
       .address {
         text-align: left;
